--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <li><a href="#journey">回家旅程</a></li>
                     <li><a href="#memories">家乡回忆</a></li>
                     <li><a href="#hometown">家乡风貌</a></li>
-                    <li><a href="#contact">联系我</a></li>
+                    <li><a href="#contact">关于我</a></li>
                 </ul>
             </nav>
         </div>
